Added getters and setters for a different regressor model for the RegressionRecommender.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -85,14 +85,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "\n",
     "from qtfrecommender import RegressionRecommender\n",
     "\n",
-    "recommender = RegressionRecommender(supervised=True, load_default=False)\n",
+    "\n",
+    "recommender = RegressionRecommender(supervised=True, load_default=False, model=RandomForestRegressor(n_jobs=-1))\n",
     "\n",
     "recommender.fit(full_set_path=\"./data/full_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
     "# recommender.fit(full_set_path=\"./data/train_set/\", train_set_path=\"./data/train_set/\", test_set_path=\"./data/test_set/\")\n",
     "recommender.save_meta_table(\"./qtfrecommender/methods/data/regression_meta_table.h5\")\n",
-    "recommender.persist_model(\"./qtfrecommender/methods/data/RegressionRecommender.joblib\")"
+    "recommender.persist_model(\"./qtfrecommender/methods/data/RegressionRecommender.joblib\")\n",
+    "\n",
+    "\n",
+    "recommender.model = XGBRegressor(n_jobs=-1)\n",
+    "recommender.persist_model(\"./qtfrecommender/methods/data/RegressionRecommenderXGBOOST.joblib\")\n",
+    "\n",
+    "\n",
+    "recommender.model = SVR()\n",
+    "recommender.persist_model(\"./qtfrecommender/methods/data/RegressionRecommenderSVR.joblib\")"
    ]
   },
   {
@@ -240,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,214 +307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>quantifier</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>sample_size</th>\n",
-       "      <th>sampling_seed</th>\n",
-       "      <th>iteration</th>\n",
-       "      <th>alpha</th>\n",
-       "      <th>pred_prev</th>\n",
-       "      <th>abs_error</th>\n",
-       "      <th>run_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>623</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>243</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.060000</td>\n",
-       "      <td>0.060000</td>\n",
-       "      <td>0.000278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>18</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.060000</td>\n",
-       "      <td>0.060000</td>\n",
-       "      <td>0.000257</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>549</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.020000</td>\n",
-       "      <td>0.020000</td>\n",
-       "      <td>0.000272</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>(KNN)Top-1</td>\n",
-       "      <td>1043_ada_agnostic</td>\n",
-       "      <td>100</td>\n",
-       "      <td>447</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000280</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26395</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>1479_hill-valley</td>\n",
-       "      <td>100</td>\n",
-       "      <td>554</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.896931</td>\n",
-       "      <td>0.103069</td>\n",
-       "      <td>0.327147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26396</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>1479_hill-valley</td>\n",
-       "      <td>100</td>\n",
-       "      <td>379</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.897966</td>\n",
-       "      <td>0.102034</td>\n",
-       "      <td>0.331295</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26397</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>1479_hill-valley</td>\n",
-       "      <td>100</td>\n",
-       "      <td>348</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.879302</td>\n",
-       "      <td>0.120698</td>\n",
-       "      <td>0.330035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26398</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>1479_hill-valley</td>\n",
-       "      <td>100</td>\n",
-       "      <td>840</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.890648</td>\n",
-       "      <td>0.109352</td>\n",
-       "      <td>0.327178</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26399</th>\n",
-       "      <td>(KNN)Top-9+W</td>\n",
-       "      <td>1479_hill-valley</td>\n",
-       "      <td>100</td>\n",
-       "      <td>114</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.887599</td>\n",
-       "      <td>0.112401</td>\n",
-       "      <td>0.328550</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>26400 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         quantifier            dataset  sample_size  sampling_seed  iteration  \\\n",
-       "0        (KNN)Top-1  1043_ada_agnostic          100            623          1   \n",
-       "1        (KNN)Top-1  1043_ada_agnostic          100            243          2   \n",
-       "2        (KNN)Top-1  1043_ada_agnostic          100             18          3   \n",
-       "3        (KNN)Top-1  1043_ada_agnostic          100            549          4   \n",
-       "4        (KNN)Top-1  1043_ada_agnostic          100            447          5   \n",
-       "...             ...                ...          ...            ...        ...   \n",
-       "26395  (KNN)Top-9+W   1479_hill-valley          100            554          6   \n",
-       "26396  (KNN)Top-9+W   1479_hill-valley          100            379          7   \n",
-       "26397  (KNN)Top-9+W   1479_hill-valley          100            348          8   \n",
-       "26398  (KNN)Top-9+W   1479_hill-valley          100            840          9   \n",
-       "26399  (KNN)Top-9+W   1479_hill-valley          100            114         10   \n",
-       "\n",
-       "       alpha  pred_prev  abs_error  run_time  \n",
-       "0        0.0   0.000000   0.000000  0.000309  \n",
-       "1        0.0   0.060000   0.060000  0.000278  \n",
-       "2        0.0   0.060000   0.060000  0.000257  \n",
-       "3        0.0   0.020000   0.020000  0.000272  \n",
-       "4        0.0   0.000000   0.000000  0.000280  \n",
-       "...      ...        ...        ...       ...  \n",
-       "26395    1.0   0.896931   0.103069  0.327147  \n",
-       "26396    1.0   0.897966   0.102034  0.331295  \n",
-       "26397    1.0   0.879302   0.120698  0.330035  \n",
-       "26398    1.0   0.890648   0.109352  0.327178  \n",
-       "26399    1.0   0.887599   0.112401  0.328550  \n",
-       "\n",
-       "[26400 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ensemble_quantifier import EnsembleQuantifier\n",
     "\n",
