--- a/lib_test.ipynb
+++ b/lib_test.ipynb
@@ -2,40 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 0.23186823794206657, 1: 0.7681317620579334}\n",
-      "     threshold       fpr       tpr\n",
-      "0         0.00  1.000000  1.000000\n",
-      "1         0.01  0.273939  0.999587\n",
-      "2         0.02  0.193939  0.999587\n",
-      "3         0.03  0.157576  0.999587\n",
-      "4         0.04  0.126061  0.999175\n",
-      "..         ...       ...       ...\n",
-      "96        0.96  0.007273  0.953364\n",
-      "97        0.97  0.007273  0.941808\n",
-      "98        0.98  0.007273  0.919521\n",
-      "99        0.99  0.006061  0.859265\n",
-      "100       1.00  0.000000  0.000000\n",
-      "\n",
-      "[101 rows x 3 columns]\n",
-      "(np.float64(0.7688532465670048), np.float64(0.23114675343299518))\n"
+     "ename": "TypeError",
+     "evalue": "AggregativeQuantifier.predict() takes 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 67\u001b[0m\n\u001b[0;32m     61\u001b[0m           qtf \u001b[38;5;241m=\u001b[39m value()\n\u001b[0;32m     63\u001b[0m      qtf\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[1;32m---> 67\u001b[0m      \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mqtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;250;43m \u001b[39;49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     70\u001b[0m \u001b[38;5;66;03m# pwk = PWK(learner=PWKCLF())\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;66;03m# ms2 = MS2()\u001b[39;00m\n\u001b[0;32m     72\u001b[0m \u001b[38;5;66;03m# t50 = T50()\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    148\u001b[0m \n\u001b[0;32m    149\u001b[0m \u001b[38;5;66;03m# print(_T50(test_scores=test_scores, tprfpr=tprfpr))\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: AggregativeQuantifier.predict() takes 2 positional arguments but 3 were given"
      ]
     }
    ],
    "source": [
     "from mlquantify.methods import CC, ACC, MAX, PCC, PACC, X_method, MS, MS2, HDy, SMM, SORD, DyS, PWK, T50, EMQ\n",
     "from mlquantify.classification import PWKCLF\n",
+    "from mlquantify import set_arguments\n",
+    "from mlquantify.methods import AGGREGATIVE\n",
+    "\n",
+    "import pdb\n",
     "\n",
     "from quantifiers.T50 import T50 as _T50\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
     "\n",
     "\n",
     "import pandas as pd\n",
@@ -56,47 +48,71 @@
     "X_test = dts_test.values\n",
     "\n",
     "clf = LogisticRegression(random_state=42)\n",
-    "scores = getTrainingScores(X_train, y_train, 10, clf)[0]\n",
-    "tprfpr = getTPRFPR(scores)\n",
-    "test_scores = clf.predict_proba(X_test)[:,1]\n",
+    "train_scores = getTrainingScores(X_train, y_train, 10, clf)[0]\n",
+    "y_labels = train_scores.pop('class').to_numpy()\n",
+    "\n",
+    "test_scores = clf.predict_proba(X_test)# [:,1]\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "#    - y_pred \n",
+    "#         - posteriors_test\n",
+    "#         - y_labels\n",
+    "#         = posteriors_train\n",
+    "\n",
     "_dts_test = pd.DataFrame(X_test)\n",
     "\n",
+    "set_arguments(y_pred=y_pred.tolist(), # Predictions for the TEST set ()\n",
+    "                posteriors_test=test_scores, # Scores of the TEST set ()\n",
+    "                 y_labels=y_labels.tolist(), # True labels of the TRAIN set ()\n",
+    "                 posteriors_train=train_scores # Scores extracted from TRAIN set ()\n",
+    "            )\n",
     "\n",
     "\n",
-    "cc = CC(learner=clf)\n",
-    "acc = ACC(learner=LogisticRegression(random_state=42))\n",
-    "max = MAX(learner=clf)\n",
-    "pcc = PCC(learner=clf)\n",
-    "pacc = PACC(learner=clf)\n",
-    "x_method = X_method(learner=clf)\n",
-    "ms = MS(learner=clf)\n",
-    "ms2 = MS2(learner=clf)\n",
-    "hdy = HDy(learner=clf)\n",
-    "smm = SMM(learner=clf)\n",
-    "sord = SORD(learner=clf)\n",
-    "dys = DyS(learner=clf)\n",
-    "pwk = PWK(learner=PWKCLF())\n",
-    "t50 = T50(learner=clf)\n",
-    "emq = EMQ(learner=clf)\n",
     "\n",
-    "cc.fit(X_train, y_train)\n",
-    "acc.fit(X_train, y_train)\n",
-    "max.fit(X_train, y_train)\n",
-    "pcc.fit(X_train, y_train)\n",
-    "pacc.fit(X_train, y_train)\n",
-    "x_method.fit(X_train, y_train)\n",
-    "ms.fit(X_train, y_train)\n",
-    "ms2.fit(X_train, y_train)\n",
-    "hdy.fit(X_train, y_train)\n",
-    "smm.fit(X_train, y_train)\n",
-    "sord.fit(X_train, y_train)\n",
-    "dys.fit(X_train, y_train)\n",
-    "pwk.fit(X_train, y_train)\n",
+    "AGGREGATIVE.pop('FM', None)\n",
+    "AGGREGATIVE.pop('GAC', None)\n",
+    "AGGREGATIVE.pop('GPAC', None)\n",
+    "AGGREGATIVE.pop('DySsyn', None)\n",
+    "\n",
+    "for key, value in AGGREGATIVE.items():\n",
+    "     if key == \"PWK\":\n",
+    "          qtf = value(learner=PWKCLF())\n",
+    "     else:\n",
+    "          qtf = value()\n",
+    "     \n",
+    "     qtf.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
+    "\n",
+    "     print(f\"{key}: {qtf.predict(X_test)}\")\n",
+    "\n",
+    "\n",
+    "# pwk = PWK(learner=PWKCLF())\n",
+    "# ms2 = MS2()\n",
+    "# t50 = T50()\n",
+    "# emq = EMQ()\n",
+    "\n",
+    "# pwk.fit(X_train, y_train)\n",
+    "# ms2.fit(X_train, y_train)\n",
     "# t50.fit(X_train, y_train)\n",
     "# emq.fit(X_train, y_train)\n",
     "\n",
     "\n",
-    "cc.learner == acc.learner\n",
+    "\n",
+    "# print(f\"PWK: {pwk.predict(X_test)}\")\n",
+    "# print(f\"MS2: {ms2.predict(X_test)}\")\n",
+    "# print(f\"T50: {t50.predict(X_test)}\")\n",
+    "# print(f\"EMQ: {emq.predict(X_test)}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# pwk.fit(X_train, y_train)\n",
+    "# ms2.fit(X_train, y_train)\n",
+    "# t50.fit(X_train, y_train)\n",
+    "# emq.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# print(cc.predict(X_test))\n",
     "\n",
@@ -145,13 +161,20 @@
     "# print()\n",
     "# a\n",
     "\n",
-    "t50.fit(X_train, y_train)\n",
-    "print(t50.predict(X_test))\n",
+    "# t50.fit(X_train, y_train)\n",
+    "# print(t50.predict(X_test))\n",
     "\n",
     "# t50._g_probabilities[0][0]\n",
     "\n",
-    "print(_T50(test_scores=test_scores, tprfpr=tprfpr))"
+    "# print(_T50(test_scores=test_scores, tprfpr=tprfpr))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
